- Added blog entries to the News tab.
- Separate config file for --debug mode.
- Fixed empty config file on first startup.
- Chat messages are logged to ~/tmradio-chat.log
- Track weight is shown in the progress bar.
- Notify the user when he's mentioned in the chat.
- Clicking the tray icon raises the window is it was not visible.
- Track weight is displayed in the progress bar.


Version 0.12

- Message log can no longer be edited manually.
- The list of nicknames is now sorted.
- Nicknames in the Twitter tab can be clicked.
- Tags are now changed more efficiently.
- Trailing empty spaces are removed from chat messages.
- Added a tab with podcasts.
- The voting buttons can no longer be unpressed.
- Added a "report bugs" menu item.
- Fixed some debug messages.
- Quit when the main window is closed.
- New icons.
- Rearranged source files.
- Notifications are only shown when the window is not visible.
- Chat nickname is reported to the streaming server.
- Twitter messages link to message pages, not user profiles.
- Chat messages prefixed with a slash are sent to the bot (e.g., /skip).
- Sudo is no longer needed to build a deb package.
- Settings are stored in ~/.tmradio-client.yaml, not GConf (which blocked
  porting to Windows).
- The jabber password is now stored obfuscated with base64.
- Removed some unused code.
- Moved the source code to GitHub, changed links in the Help menu.


Version 0.11

- Using a TextView for chat log and twitter, text can now be copied.


Version 0.10

- The news tab shows twit dates and times.
- Added a 60s delay between twitter updated.
- Fixed problems with Twitter updates (records are now stored locally in case
  they disappear from the ATOM feed, which happens often).
- Fixed the problem with lots of news expanding the application window.
- Added some basic markup for the chat window.
- Long chat messages no longer hide behind the scroll bar.
- Links in chat can now be opened using a pop-up menu.