@@ -248,14 +248,14 @@ class Jabber:
         match = self.np_re.match(msg.getStatus() or '')
         if match:
             title, artist, track_id, count, weight, listeners, tags = match.groups()
-            tags = [x.lstrip('@').strip() for x in tags.split(u' ')]
+            tags = [x for x in re.split('[,@ ]', tags) if x]
             self.post_replies([
                 ('set', 'track_id', track_id),
                 ('set', 'track_artist', artist),
                 ('set', 'track_title', title),
                 ('set', 'track_playcount', count),
                 ('set', 'track_weight', weight),
-                ('set', 'track_labels', tags),
+                #('set', 'track_labels', tags),
                 ('set', 'track_listeners', int(listeners)),
             ])
             # Status changed because somebody added labels or voted.  Our
